# ScottPlayer

./: CMakeLists.txt  README.md  org.flatpak.scottplayer.appdata.xml  org.flatpak.scottplayer.desktop  org.flatpak.scottplayer.yaml
.github/workflows/: cmake.yml  cmake_mac.yml  cmake_windows.yml  flatpak.yml
res/: ScottPlayer.icns  ScottPlayer.qrc  addSchedule.ui  addschedule.ui  mainwindow.ui  multisync.ui  resource.rc
res/installer/: ScottPlayer.iss.in
src/: addschedule.cpp  addschedule.h  mainwindow.cpp  mainwindow.h  qxtcheckcombobox.cpp  qxtcheckcombobox.h  qxtcheckcombobox_p.h
src/fseq/: FSEQFile.cpp  FSEQFile.h
src/outputs/: ArtNetOutput.cpp  BaseOutput.h  DDPOutput.cpp  DDPOutput.h  DMXOutput.cpp  DMXOutput.h  E131Output.cpp  E131Output.h  GenericSerialOutput.cpp  GenericSerialOutput.h  IPOutput.h  OpenDMXOutput.cpp  OpenDMXOutput.h  OutputManager.cpp  OutputManager.h  RenardOutput.cpp  RenardOutput.h  SyncManager.cpp  SyncManager.h  SyncPacket.h
src/players/: PlayList.h  PlayListItem.h  PlayListManager.cpp  PlayListManager.h  Schedule.h  SequencePlayer.cpp  SequencePlayer.h
